syntax = "proto3";

package tagPlayer;

message TagPlayerRequest {
  string message = 1;
}

message TagPlayerResponse {
  bool success = 1;
}

service TagPlayerService {
  rpc TagPlayer(TagPlayerRequest) returns (TagPlayerResponse);
}